# Righter

./: CLAUDE.md  Cargo.toml  README.md
examples/: test_diag.rs
src/: app.rs  config.rs  gui_app.rs  gui_main.rs  key.rs  lib.rs  main.rs
src/buffer/: mod.rs
src/editor/: document.rs  history.rs  mod.rs  pane.rs  selection.rs  view.rs  wrap.rs
src/gui/: code_actions.rs  command_line.rs  completion.rs  diagnostics.rs  editor_view.rs  file_finder.rs  hover.rs  mod.rs  references.rs  status_line.rs  tab_bar.rs  workspace_symbols.rs
src/highlight/: mod.rs  style.rs  theme.rs
src/input/: command.rs  keymap.rs  mod.rs  mode.rs
src/lsp/: mod.rs  transport.rs
src/ui/: code_actions.rs  command_line.rs  completion.rs  diagnostics.rs  editor_view.rs  file_finder.rs  hover.rs  mod.rs  references.rs  status_line.rs  tab_bar.rs  workspace_symbols.rs
tests/: editor_tests.rs  lsp_parse_tests.rs
