[package]
name = "righter"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Text buffer
ropey = "1.6"

# Error handling
anyhow = "1"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

# Streaming iterator (needed for tree-sitter QueryCaptures)
streaming-iterator = "0.1"

# LSP JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unicode
unicode-width = "0.2"

# Regex
regex = "1"
