[package]
name = "righter"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:eframe", "dep:egui"]

[dependencies]
# TUI (optional, default)
ratatui = { version = "0.29", features = ["crossterm"], optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }

# GUI (optional)
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Text buffer
ropey = "1.6"

# Error handling
anyhow = "1"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

# Streaming iterator (needed for tree-sitter QueryCaptures)
streaming-iterator = "0.1"

# LSP JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unicode
unicode-width = "0.2"

# Regex
regex = "1"

[[bin]]
name = "righter"
path = "src/main.rs"
required-features = ["tui"]

[[bin]]
name = "righter-gui"
path = "src/gui_main.rs"
required-features = ["gui"]
